Adição de testes de borda nos testes de simulation controller